# tablereader

./: .gitignore  LICENSE  README.md  pyproject.toml
src/tablereader/: __init__.py  csv.py  parser.py  reader.py  xls.py
tests/: test.csv  test.xlsx  test_reader.py
